modified:   vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -33,5 +33,6 @@
         "VIEW_COMPILED_PATH": "/tmp/views",
         "SSR_TEMP_PATH": "/tmp/ssr",
         "NODE_PATH": "node"
-    }
+    }, 
+    "outputDirectory": "public"
 }
