--- a/vercel.json
+++ b/vercel.json
@@ -8,6 +8,10 @@
   },
   "routes": [
     {
+      "src": "/build/(.*)",
+      "dest": "/public/build/"
+    },
+    {
       "src": "/(.*)",
       "dest": "/api/index.php"
     }
