modified:   api/index.php 	modified:   app/Http/Middleware/AdminAuthMiddleware.php 	modified:   app/Http/Middleware/SuperAdminAuthMiddleware.php 	modified:   app/Providers/AppServiceProvider.php 	modified:   resources/views/app.blade.php 	modified:   vercel.json

--- a/vercel.json
+++ b/vercel.json
@@ -8,31 +8,23 @@
   },
   "routes": [
     {
-      "src": "/build/(.*)",
-      "dest": "/public/build/"
-    },
-    {
       "src": "/(.*)",
       "dest": "/api/index.php"
     }
   ],
   "env": {
-    "APP_NAME": "Hutama Resto",
     "APP_ENV": "production",
     "APP_DEBUG": "true",
-    "APP_URL": "https://hutamaresto.vercel.app/",
-    "VERCEL_DEMO_MODE": "true",
+    "APP_URL": "https://hutama-resto.vercel.app",
     "APP_CONFIG_CACHE": "/tmp/config.php",
     "APP_EVENTS_CACHE": "/tmp/events.php",
     "APP_PACKAGES_CACHE": "/tmp/packages.php",
     "APP_ROUTES_CACHE": "/tmp/routes.php",
     "APP_SERVICES_CACHE": "/tmp/services.php",
+    "VIEW_COMPILED_PATH": "/tmp",
     "CACHE_DRIVER": "array",
     "LOG_CHANNEL": "stderr",
-    "SESSION_DRIVER": "array",
-    "VIEW_COMPILED_PATH": "/tmp/views",
-    "SSR_TEMP_PATH": "/tmp/ssr",
-    "NODE_PATH": "node"
+    "SESSION_DRIVER": "cookie"
   },
   "outputDirectory": "public"
 }
